<resources>
    <string name="app_name">Adibide3_1</string>
    <string name="action_settings">Settings</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_edit">Introduce password</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="access">Acceder</string>
    <string name="user_label">Usuario</string>
    <string name="user_edit">Introduce DNI</string>
    <string name="question">¿Cual de las siguientes ...?</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="upload_file">Subir fichero</string>
    <string name="take_photo">Sacar foto</string>
    <string name="record_audio">Grabar audio</string>
    <string name="record_video">Grabar video</string>
    <string name="button_send">Enviar</string>
    <string name="button_help">Ver ayuda</string>
    <string name="no_camera">Su dispositivo no tiene cámara</string>
    <string name="no_app">Su dispositivo no tiene una aplicación de cámara</string>
    <string name="no_micro">Su dispositivo no tiene micrófono</string>
</resources>
