<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tta.es.adibide3_1.ExerciseActivity"
    tools:showIn="@layout/activity_exercise">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/exercise_wording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_send_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"/>

        <Button
            android:id="@+id/button_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:onClick="takePhoto" />

        <Button
            android:id="@+id/button_record_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_audio"/>

        <Button
            android:id="@+id/button_record_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_video"
            android:onClick="recordVideo"/>

    </LinearLayout>

</RelativeLayout>
